rrr/network/traefikservice.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Service
metadata:
  name: authex
